add colour highlights to EU referendum exercise text

--- a/exercises/eu_referendum/eu_referendum.ipynb
+++ b/exercises/eu_referendum/eu_referendum.ipynb
@@ -4,14 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EU referendum: interactive `bokeh` map"
+    "# EU referendum: interactive `bokeh` map <img src=\"images/JHI_STRAP_Web.png\" style=\"width: 150px; float: right;\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction"
+    "<div class=\"alert alert-success\">\n",
+    "<h2>Introduction</h2>\n",
+    "<br/>\n",
+    "</div>\n"
    ]
   },
   {
@@ -39,6 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![2016 EU referendum results for England](images/eu_ref_manchester.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Learning Outcomes\n",
     "\n",
     "* Import and process shapefile GIS data using `pyshp`\n",
@@ -51,7 +61,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise"
+    "<div class=\"alert alert-success\">\n",
+    "<h2>Exercise<h2>\n",
+    "</div>"
    ]
   },
   {
@@ -67,11 +79,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-warning\">\n",
     "The exercise is divided into three main sections:\n",
     "\n",
-    "1. Processing geographical boundary data\n",
-    "2. Processing vote data\n",
-    "3. Rendering the data together in an interactive `bokeh` plot\n",
+    "<ol>\n",
+    "<li> Processing geographical boundary data\n",
+    "<li> Processing vote data\n",
+    "<li> Rendering the data together in an interactive <b>bokeh</b> plot\n",
+    "</ol>\n",
+    "</div>\n",
     "\n",
     "Each will involve the use of a different Python library, illustrating basic data-handling and integration."
    ]
@@ -80,7 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Processing geographical boundary data\n",
+    "<div class=\"alert alert-success\">\n",
+    "<h3>1. Processing geographical boundary data</h3>\n",
+    "</div>\n",
     "\n",
     "#### Introduction\n",
     "\n",
@@ -90,7 +108,9 @@
     "\n",
     "The `shapefile` format is moderately complex and may contain between 3 and 16 distinct files that describe elements of the data (see the [Wikipedia page](https://en.wikipedia.org/wiki/Shapefile)). In order to parse and work with this data, we will use the [`pyshp`](https://pypi.python.org/pypi/pyshp/) programming library.\n",
     "\n",
-    "Your goal is to convert the shapefile data into a set of *x* and *y* co-ordinates that define the boundaries of each region, so that they may be plotted using `bokeh`."
+    "<div class=\"alert alert-warning\">\n",
+    "Your goal is to convert the shapefile data into a set of <i>x</i> and <i>y</i> co-ordinates that define the boundaries of each region, so that they may be plotted using <b>bokeh</b>.\n",
+    "</div>"
    ]
   },
   {
@@ -168,14 +188,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shapefile data is divided up into several components. The two components that concern us are `shape` and `record` data.\n",
+    "<div class=\"alert alert-danger\">\n",
+    "Shapefile data is divided up into several components. The two components that concern us are <b>shape</b> and <b>record</b> data.\n",
     "\n",
-    "* **shape** data contains a list of (*x*, *y*) co-ordinates that define the boundaries of each region contained in the dataset.\n",
-    "* **record** data contains metadata describing each region in the dataset\n",
+    "<ul>\n",
+    "<li> <b>shape</b> data contains a list of (<i>x</i>, <i>y</i>) co-ordinates that define the boundaries of each region contained in the dataset.\n",
+    "<li> <b>record</b> data contains metadata describing each region in the dataset\n",
+    "</ul>\n",
+    "</div>\n",
     "\n",
     "In particular, the record data for our electoral boundaries comprises two strings: an `Area_Code` that cross-references to the electoral data we will load below; and the name of the region.\n",
     "\n",
-    "You will need to create two variables, separately holding the shape and record data. These can be obtained using the `shape()` and `records()` methods of the `sf` object you created above.\n",
+    "<div class=\"alert alert-warning\">\n",
+    "You will need to create two variables, separately holding the shape and record data.\n",
+    "</div>\n",
+    "\n",
+    "These can be obtained using the `shape()` and `records()` methods of the `sf` object you created above.\n",
     "\n",
     "```python\n",
     "shapes = sf.shapes()\n",
@@ -282,9 +310,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Shapes with several parts\n",
+    "<div class=\"alert alert-danger\">\n",
+    "<h4>Shapes with several parts</h4>\n",
     "\n",
-    "Some UK regions are *contiguous*: they can be described by a single boundary that surrounds the entire region without a break. Other regions are not so easy to define, and are divided into *parts* - separate subregions, each of which has a contiguous boundary. The existence of several *parts* is indicated by inspecting the `.parts` attribute of any of the elements in `shapes`:\n",
+    "Some UK regions are <i>contiguous</i>: they can be described by a single boundary that surrounds the entire region without a break. Other regions are not contiguous, but are divided into <b>parts</b> - separate subregions, each of which has a contiguous boundary. These need to be rendered as separate <b>patches</b> on the map.\n",
+    "</div>\n",
+    "\n",
+    "The existence of several *parts* is indicated by inspecting the `.parts` attribute of any of the elements in `shapes`:\n",
     "\n",
     "```python\n",
     "shapes[0].parts\n",
@@ -326,9 +358,11 @@
    "source": [
     "#### Converting shape data into input for `bokeh`\n",
     "\n",
-    "To render the shape data we have loaded in `bokeh`, we need to separate each contiguous subregion's boundary data into two lists: *x* co-ordinates; and *y* co-ordinates.\n",
+    "<div class=\"alert alert-warning\">\n",
+    "To render the shape data we have loaded in <b>bokeh</b>, we need to separate each contiguous subregion's boundary data into two lists: <i>x</i> co-ordinates; and <i>y</i> co-ordinates.\n",
     "\n",
-    "We also need to create two related lists, in the same order as the co-ordinate lists: one containing the region names, and one the region `Area_Code` accession.\n",
+    "We also need to create two related lists, in the same order as the co-ordinate lists: one containing the region names, and one the region <b>Area_Code</b> accession.\n",
+    "</div>\n",
     "\n",
     "The code to generate these lists is given in the cell below."
    ]
@@ -399,7 +433,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Importing EU referendum voting data\n",
+    "<div class=\"alert alert-success\">\n",
+    "<h3>2. Importing EU referendum voting data</h3>\n",
+    "</div>\n",
     "\n",
     "#### Introduction\n",
     "\n",
@@ -411,9 +447,11 @@
     "\n",
     "This file contains a number of informative columns, including total size of electorate, number of ballots cast, and the number (and proportion) of votes for Leave, Remain (or spoiled).\n",
     "\n",
+    "<div class=\"alert alert-danger\">\n",
     "Each row of the table represents a distinct area, corresponding to a single region in the geographical data we have already imported, but the two datasets do not exactly correspond. Some voting regions are not present in our geographical data, for example.\n",
     "\n",
-    "The two datasets: geographical and electoral, can be joined using the `Area_Code` identifier."
+    "The two datasets: geographical and electoral, can be joined using the <b>Area_Code</b> identifier.\n",
+    "</div>"
    ]
   },
   {
@@ -525,7 +563,9 @@
    "source": [
     "#### Converting electoral data into input for `bokeh`\n",
     "\n",
-    "We aim to convert the numerical data for the percentage of Remain ballots in each region into a list, like `region_names` or `region_code`, that associates that value with each contiguously-bounded geographical region.\n",
+    "<div class=\"alert alert-warning\">\n",
+    "We aim to convert the numerical data for the percentage of Remain ballots in each region into a list, like <b>region_names</b> or <b>region_code</b>, that associates that value with each contiguously-bounded geographical region.\n",
+    "</div>\n",
     "\n",
     "To do this, we loop over every `Area_Code` in the `region_code` list and cross-reference it against the `pandas` DataFrame, building a list of `Pct_Remain` values from the imported table. This is done in the code below."
    ]
@@ -575,7 +615,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Render an interactive `bokeh` plot\n",
+    "<div class=\"alert alert-success\">\n",
+    "<h3>3. Render an interactive <b>bokeh</b> plot</h3>\n",
+    "</div>\n",
     "\n",
     "#### Introduction\n",
     "\n",
@@ -583,7 +625,9 @@
     "\n",
     "`bokeh` is a Python library for interactive visualisation that can be used to quickly create interactive plots. It renders in the style of `D3.js`.\n",
     "\n",
-    "We will integrate our geographical and electoral data into a `ColumnDataSource` object that can be used to generate a `bokeh` plot, and render this in the browser with useful visualisation options (zoom, pan, etc.) and annotation that renders with a mouseover event."
+    "<div class=\"alert alert-warning\">\n",
+    "We will integrate our geographical and electoral data into a <b>ColumnDataSource</b> object that can be used to generate a <b>bokeh</b> plot, and render this in the browser with useful visualisation options (zoom, pan, etc.) and annotation that renders with a mouseover event.\n",
+    "</div>"
    ]
   },
   {
@@ -650,9 +694,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creating colour information\n",
+    "#### Creating colour information\n",
     "\n",
-    "To render colour information in our `bokeh` plot, we must provide colours in a list - one per bounded element, as with the `region_names` and `region_codes` data.\n",
+    "<div class=\"alert alert-warning\">\n",
+    "To render colour information in our <b>bokeh</b> plot, we must provide colours in a list - one per bounded element, as with the <b>region_names</b> and <b>region_codes</b> data.\n",
+    "</div>\n",
     "\n",
     "The Remain votes are defined as percentages in the range [0,100], with minimum and maximum somewhere on that range, so we could prefer a *continuous* or *interpolated* colour scale (rather than a palette of finite colours). Initially, however, we will plot using the `RdYlBu10` Brewer palette, which will allow us to divide the Remain vote visually into 10% cohorts, which is a meaningful division.\n",
     "\n",
@@ -684,7 +730,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We wish to convert our electoral data into these ten colour bands, to create a list of colours - one per region - to reflect the percentage remain vote. We are effectively mapping all Remain percentages between 0% and 10% to the index `0`, those between 10% and 20% to the index `1`, and so on. These indices can then be used to pull out the relevant colour from the list in `RdYlBu10`, in the code below."
+    "<div class=\"alert alert-warning\">\n",
+    "We wish to convert our electoral data into these ten colour bands, to create a list of colours - one per region - to reflect the percentage remain vote. We are effectively mapping all Remain percentages between 0% and 10% to the index <b>0</b>, those between 10% and 20% to the index <b>1</b>, and so on. These indices can then be used to pull out the relevant colour from the list in <b>RdYlBu10</b>, in the code below.\n",
+    "</div>"
    ]
   },
   {
