add the completed Grammar of Graphics exercise notebook

--- a/index.ipynb
+++ b/index.ipynb
@@ -32,10 +32,14 @@
     "<b>Grammar of Graphics</b>\n",
     "</div>\n",
     "\n",
-    "### Learning Outcomes\n",
+    "### Learning Outcomes\n",
     "\n",
-    "* Understand the *Grammar of Graphics*\n",
-    "* Use the *Grammar of Graphics* with the `ggplot` module to produce a scatterplot"
+    "* Understand the Grammar of Graphics\n",
+    "* Use the Grammar of Graphics with the `ggplot` module to produce a scatterplot from *aesthetics* and *geometric representations*.\n",
+    "* Use *layers* to produce new visualisations specifically to suit your data, showing data and statistical summaries\n",
+    "* Use multi-panel figures to display complex datasets\n",
+    "\n",
+    "![grammar of graphics example](exercises/grammar_of_graphics/images/gog.png)"
    ]
   },
   {
