add notebook anchors to index.ipynb images

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,11 +26,18 @@
    "source": [
     "## Exercises\n",
     "\n",
-    "This repository contains the following exercises:\n",
-    "\n",
+    "This repository contains the following exercises:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-success\">\n",
     "<b>Grammar of Graphics</b>\n",
     "</div>\n",
+    "\n",
+    "* [grammar_of_graphics.ipynb](exercises/grammar_of_graphics/grammar_of_graphics.ipynb)\n",
     "\n",
     "### Learning Outcomes\n",
     "\n",
@@ -39,7 +46,7 @@
     "* Use *layers* to produce new visualisations specifically to suit your data, showing data and statistical summaries\n",
     "* Use multi-panel figures to display complex datasets\n",
     "\n",
-    "![grammar of graphics example](exercises/grammar_of_graphics/images/gog.png)"
+    "[![grammar of graphics example](exercises/grammar_of_graphics/images/gog.png)]((exercises/grammar_of_graphics/grammar_of_graphics.ipynb)"
    ]
   },
   {
@@ -60,7 +67,7 @@
     "* Visualise 2D array data as a 3D surface plot\n",
     "* Explore the application and influence of colour palettes and lighting effects on the interpretation of 3D surface plots\n",
     "\n",
-    "![3D surface plot](exercises/colormaps_surfaces_netcdf/images/intro_image.png)"
+    "[![3D surface plot](exercises/colormaps_surfaces_netcdf/images/intro_image.png)]((exercises/colormaps_surfaces_netcdf/colormaps_surfaces_netcdf.ipynb)"
    ]
   },
   {
@@ -80,7 +87,7 @@
     "* Render GIS boundary data in an interactive `bokeh` plot\n",
     "* Colour geospatial data by results in an interactive `bokeh` plot\n",
     "\n",
-    "![interactive map screenshot](exercises/interactive_bokeh_map/images/eu_ref_manchester.png)"
+    "[![interactive map screenshot](exercises/interactive_bokeh_map/images/eu_ref_manchester.png)](exercises/interactive_bokeh_map/interactive_bokeh_map.ipynb)"
    ]
   },
   {
