add slides on evidence-based representation

--- a/presentation/2016-07-28_RDVW_Pritchard.tex
+++ b/presentation/2016-07-28_RDVW_Pritchard.tex
@@ -50,12 +50,14 @@
 \input{sections/elementary_tasks}
 
 %%%
-% SECTION: GENOMICS
+% SECTION: EVIDENCE-BASED REPRESENTATION
 \section{Evidence-based representation}
 \subsection{What representations work best?}
 \input{sections/what_representation}
-\subsection{To piechart or not to piechart?}
-
+\subsection{To pie chart or not to pie chart?}
+\input{sections/pie_charts}
+\subsection{Bars and lines}
+\input{sections/bar_charts}
 
 %%%
 % SECTION: CLASSIFICATION AND DIAGNOSTICS
