--- a/presentation/sections/elementary_tasks.tex
+++ b/presentation/sections/elementary_tasks.tex
@@ -16,7 +16,9 @@
 
 % WHAT IMPLEMENTS THESE?
 \begin{frame}
-  \frametitle{Implementations}
+  \frametitle{Implementations
+  \footnote{\tiny{\href{http://www.datavizcatalogue.com/}{http://www.datavizcatalogue.com/}}}
+  }
   \begin{columns}[T]
     \begin{column}{6cm}  
       \begin{alertblock}{Position: common scale}
