add a complete first pass of evidence-based presentation advice

--- a/presentation/2016-07-28_RDVW_Pritchard.tex
+++ b/presentation/2016-07-28_RDVW_Pritchard.tex
@@ -54,14 +54,20 @@
 \section{Evidence-based representation}
 \subsection{What representations work best?}
 \input{sections/what_representation}
-\subsection{To pie chart or not to pie chart?}
+\subsection{Pie charts}
 \input{sections/pie_charts}
 \subsection{Bars and lines}
 \input{sections/bar_charts}
+\subsection{Scatterplots}
+\input{sections/scatterplots}
+\subsection{Interactive plots}
+\input{sections/interactive_plots}
 
 %%%
-% SECTION: CLASSIFICATION AND DIAGNOSTICS
-\section{}
+% SECTION: CONCLUSIONS
+\section{Conclusions}
+\subsection{General advice}
+\input{sections/general_advice}
 
 %%%
 % SECTION: Acknowledgements
