add first completion of 1D continuous data example and index.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -34,6 +34,25 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">\n",
+    "<b>One-variable, continuous data</b>\n",
+    "</div>\n",
+    "\n",
+    "* [one_variable_continuous.ipynb](exercises/one_variable_continuous/one_variable_continuous.ipynb)\n",
+    "\n",
+    "### Learning Outcomes\n",
+    "\n",
+    "* Representing one-dimensional continuous-valued data using `matplotlib` and `seaborn` libraries\n",
+    "* Generating random example data\n",
+    "* Use of `figure()` and subplots\n",
+    "\n",
+    "[![1D contiuous data example](exercises/one_variable_continuous/images/intro_image.png)]((exercises/one_variable_continuous/one_variable_continuous.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
     "<b>Grammar of Graphics</b>\n",
     "</div>\n",
     "\n",
@@ -117,6 +136,10 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
