--- a/exercises/grammar_of_graphics/grammar_of_graphics.ipynb
+++ b/exercises/grammar_of_graphics/grammar_of_graphics.ipynb
@@ -1363,7 +1363,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.1"
   }
  },
  "nbformat": 4,
