add the complete making movies exercise with index links

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,6 +110,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Making movies with matplotlib and seaborn</b>\n",
+    "</div>\n",
+    "\n",
+    "* [making_movies.ipynb](exercises/making_movies/making_movies.ipynb)\n",
+    "\n",
+    "### Learning Outcomes\n",
+    "\n",
+    "* Understand `matplotlib`'s `animation` functionality\n",
+    "* Generate animations using `FuncAnimation`\n",
+    "* Generate line graph and bubble plot animations\n",
+    "\n",
+    "![bubble chart screenshot](exercises/making_movies/images/intro_image.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
