add warning that making_movies does not run on MyBinder

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,6 +119,10 @@
     "<b>Making movies with matplotlib and seaborn</b>\n",
     "</div>\n",
     "\n",
+    "<div class=\"alert alert-danger\">\n",
+    "<b>This exercise will not run correctly on MyBinder, as the h264 codec is not available</b>\n",
+    "</div>\n",
+    "\n",
     "* [making_movies.ipynb](exercises/making_movies/making_movies.ipynb)\n",
     "\n",
     "### Learning Outcomes\n",
@@ -129,15 +133,6 @@
     "\n",
     "![bubble chart screenshot](exercises/making_movies/images/intro_image.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
