add first complete run at continuous x,y data exercise

--- a/exercises/one_variable_continuous/one_variable_continuous.ipynb
+++ b/exercises/one_variable_continuous/one_variable_continuous.ipynb
@@ -140,7 +140,15 @@
     "\n",
     "```python\n",
     "data = random.random(100)\n",
-    "```"
+    "```\n",
+    "\n",
+    "Other random samplings are available, such as:\n",
+    "\n",
+    "* `random.randint(10, size=10)`: integers in a range\n",
+    "* `random.randn(10)`: standard normal distribution\n",
+    "* `random.negative_binomial(1, 0.1, 10)`: negative binomial distribution\n",
+    "\n",
+    "and so on. Feel free to try them below"
    ]
   },
   {
@@ -151,7 +159,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create the variable data containing 100 random values, here\n",
+    "# Create the variable data, containing 100 random values, here\n",
     "data = random.random(100)"
    ]
   },
@@ -284,7 +292,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You will notice that the values on the *y*-axis have changed. You will also notice that, perhaps counter-intuitively, some of the bars may extend past the value `1.0` on the *y*-axis; this is because the area of each bar is the width of the bin multiplied by its height, and the bin widths in this example are all around 0.1."
+    "You will notice that the values on the *y*-axis have changed. \n",
+    "\n",
+    "<div class=\"alert alert-warning\">\n",
+    "If you are using, for instance, a uniform random distribution, you will also notice that, perhaps counter-intuitively, some of the bars may extend past the value 1.0 on the <i>y</i>-axis; this is because the area of each bar is the width of the bin multiplied by its height, and the bin widths in this example are all around 0.1.\n",
+    "</div>"
    ]
   },
   {
@@ -563,6 +575,7 @@
     "ax2.set_title('normalised')\n",
     "ax3.set_title('modified')    \n",
     "    \n",
+    "# Use tight_layout to prettify\n",
     "fig.tight_layout()\n",
     "fig"
    ]
@@ -671,7 +684,7 @@
    "source": [
     "#### Subplots with `seaborn`\n",
     "\n",
-    "Although `seaborn` graphs cannot be added to figure subplots on creation in exactly the same way as `matplotlib` graphs, they can still be added by specifying the `ax` argument, as follows:\n",
+    "Although `seaborn` graphs cannot be added to figure subplots on creation in *exactly* the same way as `matplotlib` graphs, they can still be added by specifying the `ax` argument, as follows:\n",
     "\n",
     "```python\n",
     "sns.distplot(data, rug=True, ax=ax3, bins=20)\n",
