--- a/index.ipynb
+++ b/index.ipynb
@@ -53,6 +53,27 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">\n",
+    "<b>Two-variable, continuous <i>x</i>, <i>y</i> data\n",
+    "</div>\n",
+    "\n",
+    "* [continuous_x_continuous_y.ipynb](exercises/two_variables/continuous_x_continuous_y.ipynb)\n",
+    "\n",
+    "### Learning Outcomes\n",
+    "\n",
+    "* Representing two-dimensional continuous *x* and *y* data using `matplotlib` and `seaborn` libraries\n",
+    "* Use of `figure()` and subplots\n",
+    "* Annotating plots with text\n",
+    "* Working with long and wide form DataFrame\n",
+    "* Using statistical overlays and `seaborn`'s statistical plots\n",
+    "\n",
+    "![continuous x, y data example](exercises/two_variables/images/intro_image_continuous_xy.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
     "<b>Grammar of Graphics</b>\n",
     "</div>\n",
     "\n",
