add a section about my experience in datavis

--- a/presentation/2016-07-28_RDVW_Pritchard.tex
+++ b/presentation/2016-07-28_RDVW_Pritchard.tex
@@ -46,6 +46,9 @@
 %%%
 % SECTION: INTRODUCTION
 \section{Introduction}
+\subsection{Why listen to me?}
+\input{sections/about_me}
+\subsection{What is visualisation?}
 \subsection{Elementary perceptual tasks}
 \input{sections/elementary_tasks}
 
