add slides introducing data visualisation

--- a/presentation/2016-07-28_RDVW_Pritchard.tex
+++ b/presentation/2016-07-28_RDVW_Pritchard.tex
@@ -49,6 +49,7 @@
 \subsection{Why listen to me?}
 \input{sections/about_me}
 \subsection{What is visualisation?}
+\input{sections/what_is_datavis}
 \subsection{Elementary perceptual tasks}
 \input{sections/elementary_tasks}
 
