tidy figures and slides

--- a/presentation/sections/about_me.tex
+++ b/presentation/sections/about_me.tex
@@ -9,14 +9,15 @@
       \begin{itemize}  
         \item \textcolor{hutton_green}{Computational biologist (1996-present)}
         \begin{itemize}
-          \item Protein sequence-structure-function (1996-1999)
-          \item Yeast metabolism (1999-2003)
-          \item Plant pathology (2003-present)
+          \item protein sequence-structure-function (1996-1999)
+          \item yeast metabolism (1999-2003)
+          \item plant pathology (2003-present)
         \end{itemize}
         \item \textcolor{hutton_blue}{Large datasets}
         \begin{itemize}
+          \item sequence/genomic
           \item metabolomics
-          \item genomics
+          \item statistics
           \item geographical
         \end{itemize}
         \item \textcolor{hutton_purple}{Visualisation as communication to (wet) biologists}
@@ -24,6 +25,7 @@
           \item protein structures
           \item metabolic flux
           \item comparative genomics/evolution
+          \item statistical plots
         \end{itemize}
       \end{itemize}  
 \end{frame}
@@ -33,16 +35,20 @@
   \frametitle{GenomeDiagram 
     \footnote{\tiny{\href{http://dx.doi.org/10.1093/bioinformatics/btk021}{Pritchard \textit{et al.} (2006) \textit{Bioinformatics} doi:10.1093/bioinformatics/btk021}}}
     \footnote{\tiny{Toth \textit{et al}. (2006) \textit{Ann. Rev. Phytopath.} \href{http://dx.doi.org/10.1146/annurev.phyto.44.070505.143444}{doi:10.1146/annurev.phyto.44.070505.143444}}}
+    \footnote{\tiny{\href{http://biopython.org}{http://biopython.org}}}
     \includegraphics[width=0.18\textwidth]{images/biopython}
   }
   \begin{center}
-      \includegraphics[width=1\textwidth]{images/pba_lgt} 
+      \includegraphics[width=0.9\textwidth]{images/pba_lgt} 
   \end{center}
 \end{frame}
 
 % CORONATINE
 \begin{frame}
-  \frametitle{Functional adaptation in \textit{Pba}\footnote{\tiny{Toth \textit{et al}. (2006) \textit{Ann. Rev. Phytopath.} \href{http://dx.doi.org/10.1146/annurev.phyto.44.070505.143444}{doi:10.1146/annurev.phyto.44.070505.143444}}}}
+  \frametitle{Functional adaptation in \textit{Pba}
+    \footnote{\tiny{Toth \textit{et al}. (2006) \textit{Ann. Rev. Phytopath.} \href{http://dx.doi.org/10.1146/annurev.phyto.44.070505.143444}{doi:10.1146/annurev.phyto.44.070505.143444}}}
+    \footnote{\tiny{\href{http://biopython.org}{http://biopython.org}}}
+  }
   \begin{center}
       \includegraphics[width=1\textwidth]{images/pba_coronatine} 
   \end{center}
@@ -86,9 +92,9 @@
   \frametitle{Comparative metabolism
     \footnote{\tiny{\href{https://github.com/widdowquinn/notebooks/blob/master/Biopython_KGML_intro.ipynb}{Biopython KGML/KEGG visualisation module}}}
     \footnote{\tiny{\href{https://github.com/widdowquinn/Notebooks-Bioinformatics}{https://github.com/widdowquinn/Notebooks-Bioinformatics}}}
+    \footnote{\tiny{\href{http://biopython.org}{http://biopython.org}}}    
     \includegraphics[width=0.18\textwidth]{images/biopython}
   }
-  \textcolor{hutton_green}{Metabolic potential is a clue to community function \& host range}
   \begin{center}
     \includegraphics[width=0.9\textwidth]{images/dickeya_pathways}
   \end{center}
