--- a/presentation/sections/elementary_tasks.tex
+++ b/presentation/sections/elementary_tasks.tex
@@ -48,3 +48,34 @@
   \end{columns}      
 \end{frame}
 
+% GESTALT
+\begin{frame}
+  \frametitle{Gestalt principles
+  \footnote{\tiny{\href{https://emeeks.github.io/gestaltdataviz}{https://emeeks.github.io/gestaltdataviz}}}
+  }
+  \begin{scriptsize}
+  \begin{columns}[T]
+    \begin{column}{5.5cm}  
+      \begin{itemize}  
+        \item \textbf{proximity}: close objects perceived as groups\\
+          \includegraphics[height=0.15\textheight]{images/gestalt_proximity}
+        \item \textbf{enclosure}: bounded objects perceived as groups\\
+          \includegraphics[height=0.15\textheight]{images/gestalt_enclosure}          
+        \item \textbf{continuity}: aligned objects perceived as continuous\\
+          \includegraphics[height=0.15\textheight]{images/gestalt_continuity}          
+      \end{itemize}  
+    \end{column}
+    \begin{column}{5.5cm}  
+      \begin{itemize}
+        \item \textbf{similarity}: similar attributes perceived as groups\\
+          \includegraphics[height=0.15\textheight]{images/gestalt_similarity}
+        \item \textbf{closure}: open objects perceived as complete\\
+          \includegraphics[height=0.15\textheight]{images/gestalt_closure}          
+        \item \textbf{connection}: connected items perceived as groups\\
+          \includegraphics[height=0.15\textheight]{images/gestalt_connection}
+      \end{itemize}
+    \end{column}
+  \end{columns}   
+  \end{scriptsize}   
+\end{frame}
+
