--- a/presentation/sections/what_is_datavis.tex
+++ b/presentation/sections/what_is_datavis.tex
@@ -5,17 +5,17 @@
 
 % STORYTELLING
 \begin{frame}
-  \frametitle{Datavis is art and science}
+  \frametitle{Data visualisation is art and science}
     $\ldots$storytelling in pictorial or graphical format \\
       \begin{itemize}  
-        \item <1->\textcolor{hutton_green}{Stories to yourself}
+        \item <1->\textcolor{hutton_green}{Stories to yourself (sense-making)}
         \begin{itemize}
           \item <2->summarise big stories quickly
           \item <2->data exploration and mining
           \item <2->identify areas/items of importance
           \item <2->find relationships and patterns
         \end{itemize}
-        \item <1->\textcolor{hutton_blue}{Stories to others}
+        \item <1->\textcolor{hutton_blue}{Stories to others (communication)}
         \begin{itemize}
           \item <3->present your interpretation of data
           \item <3->make a specific point
