--- a/presentation/sections/what_representation.tex
+++ b/presentation/sections/what_representation.tex
@@ -12,7 +12,7 @@
     \textcolor{hutton_green}{Empirical measurements of interpretation}
     \begin{itemize}  
       \item Subjects shown graphs representing same data
-      \item ($\log_2$) Error in subjects' accuracy compared by graph type
+      \item ($\log_2$) error in subjects' accuracy compared by graph type
     \end{itemize}  
     \begin{alertblock}{Judgement types}
       \begin{itemize}
